[gd_scene load_steps=6 format=3 uid="uid://d0ebq6g82nb1c"]

[ext_resource type="Script" path="res://scenes/debug/limbed_character.gd" id="1_12s5e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c50el"]

[sub_resource type="CircleShape2D" id="CircleShape2D_10ats"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_flu8a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhuov"]

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(58, 58)
collision_layer = 16
collision_mask = 19
script = ExtResource("1_12s5e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_c50el")
debug_color = Color(0.643137, 0.52549, 0, 0.419608)

[node name="Head" type="AnimatableBody2D" parent="."]
position = Vector2(4, -56)
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource("CircleShape2D_10ats")
metadata/_edit_lock_ = true

[node name="LeftArm" type="AnimatableBody2D" parent="."]
position = Vector2(-39, -11)
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArm"]
shape = SubResource("RectangleShape2D_flu8a")
debug_color = Color(0, 0.6, 0, 0.419608)
metadata/_edit_lock_ = true

[node name="RightArm" type="AnimatableBody2D" parent="."]
position = Vector2(41, -12)
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArm"]
shape = SubResource("RectangleShape2D_rhuov")
debug_color = Color(0, 0.6, 0, 0.419608)
metadata/_edit_lock_ = true

[node name="LeftLeg" type="AnimatableBody2D" parent="."]
position = Vector2(-17, 47)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftLeg"]
shape = SubResource("CircleShape2D_10ats")
metadata/_edit_lock_ = true

[node name="RightLeg" type="AnimatableBody2D" parent="."]
position = Vector2(24, 47)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightLeg"]
shape = SubResource("CircleShape2D_10ats")
metadata/_edit_lock_ = true
